# Object-oriented-programming

llab1/: CMakeLists.txt  func.c++  func.h  main.c++  tests.c++
llab2/: CMakeLists.txt  func.c++  func.h  main.c++  tests.c++
llab3/: CMakeLists.txt  figure.h  figures.c++  main.c++  tests.c++
llab4/: CMakeLists.txt  Geometry.c++  Geometry.h  main.c++  tests.c++
llab5/: CMakeLists.txt  func.c++  func.h  main.c++  tests.c++
llab6/: CMakeLists.txt  func.c++  func.h  main.c++  test.c++
llab7/: CMakeLists.txt  func.c++  func.h  main.c++  test.c++
